--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,24 @@
-<%= errors_for @comment %>
-<%= form_for(@comment, html: {class: 'form-horizontal'}) do |f| %>
+<%= form_for(comment, url: {controller: :comments, action: action}, html: {class: 'form-horizontal'}) do |f| %>
     <div class="form-group">
-      <%= f.label :body, class: 'col-sm-4 control-label' %>
-      <div class="col-sm-8">
+      <%= f.label :body, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
         <%= f.text_area :body, class: 'form-control', placeholder: 'Body' %>
       </div>
     </div>
+    <div>
+      <% if comment.goal %>
+          <%= f.hidden_field :goal_id, value: comment.goal.id %>
+      <% else %>
+          <%= f.hidden_field :goal_id, value: goal.id %>
+      <% end %>
+      <% if comment.user %>
+          <%= f.hidden_field :user_id, value: comment.user_id %>
+      <% elsif user_signed_in? %>
+          <%= f.hidden_field :user_id, value: current_user.id %>
+      <% end %>
+    </div>
     <div class="form-group">
-      <div class="col-sm-offset-4 col-sm-8">
+      <div class="col-sm-offset-2 col-sm-10">
         <%= f.submit class: 'btn btn-default' %>
       </div>
     </div>
