--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,4 +1,4 @@
 <%= content_for :title, t('comments.title.edit') %>
 <%= render layout: 'layouts/panel', locals: {title: 'Editing Comment', resource: nil} do %>
-    <%= render 'comments/form' %>
+    <%= render partial: 'form', locals: {action: :update, comment: @comment} %>
 <% end %>
