--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,8 +1,4 @@
 <%= content_for :title, t('comments.title.index') %>
-<% if @comments.present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'All Comments', resource: nil} do %>
-        <%= render 'goals/comments' %>
-    <% end %>
-<% else %>
-    <% flash[:notice] = 'Create some comments for this Goal!' %>
+<%= render layout: 'layouts/panel', locals: {title: 'All Comments', resource: @comments} do %>
+    <%= render partial: 'comments', locals: {action: :index} %>
 <% end %>
