--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -1,5 +1,5 @@
-<%= errors_for @goal %>
-<%= form_for(@goal, html: {class: 'form-horizontal'}) do |f| %>
+<%= errors_for goal %>
+<%= form_for(goal, url: {controller: :goals, action: action}, html: {class: 'form-horizontal'}) do |f| %>
     <div class="form-group">
       <%= f.label :title, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
