--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,24 +1,8 @@
 <%= content_for :title, t('goals.title.show') %>
 <%= render layout: 'layouts/panel', locals: {title: 'Showing Goal', resource: nil} do %>
-    <%= render @goal %>
+    <%= render partial: 'goal', locals: {action: :show, goal: @goal} %>
 <% end %>
-<% if user_signed_in? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'New Comment', resource: nil} do %>
-        <%= render 'comments/new' %>
-    <% end %>
-<% end %>
-<% if @goal.comments.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'All Comments', resource: nil} do %>
-        <%= render 'goals/comments' %>
-    <% end %>
-<% end %>
-<% if @goal.subscriptions.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'All Subscriptions', resource: nil} do %>
-        <%= render 'goals/subscriptions' %>
-    <% end %>
-<% end %>
-<% if @goal.scores.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'All Scores', resource: nil} do %>
-        <%= render 'goals/scores' %>
-    <% end %>
+<%= render layout: 'layouts/panel', locals: {title: 'New Comment', resource: nil} do %>
+    <%= render partial: 'comments/form',
+               locals: {action: :create, comment: @goal.comments.new, goal: @goal} %>
 <% end %>
