--- a/app/views/layouts/pills/_comment.html.erb
+++ b/app/views/layouts/pills/_comment.html.erb
@@ -1,10 +1,9 @@
-<li><%= link_to 'All Goals', goals_path %></li>
-<li><%= link_to 'View Goal', @comment.goal %></li>
-<li><%= link_to 'All Comments', goal_comments_path(@comment.goal) %></li>
+<li><%= link_to 'Show Goal', @comment.goal %></li>
+<li><%= link_to 'Show User', @comment.user %></li>
 <% if current_page?(@comment) %>
-    <li class="active"><%= link_to 'View Comment', @comment %></li>
+    <li class="active"><%= link_to 'Show Comment', @comment %></li>
 <% else %>
-    <li><%= link_to 'View Comment', @comment %></li>
+    <li><%= link_to 'Show Comment', @comment %></li>
 <% end %>
 <% if can? :update, @comment %>
     <% if current_page?(edit_comment_path @comment) %>
