--- a/app/views/layouts/pills/_comments.html.erb
+++ b/app/views/layouts/pills/_comments.html.erb
@@ -1,5 +1,9 @@
-<% if @comments %>
-    <li class="active"><%= link_to 'All Comments', goal_comments_path(@goal) %></li>
+<% if params[:user_id] %>
+    <li><%= link_to 'Show User', user_path(params[:user_id]) %></li>
+    <li class="active"><%= link_to 'User Comments', comments_path(user_id: params[:user_id]) %></li>
+<% elsif params[:goal_id] %>
+    <li><%= link_to 'Show Goal', goal_path(params[:goal_id]) %></li>
+    <li class="active"><%= link_to 'Goal Comments', comments_path(goal_id: params[:goal_id]) %></li>
 <% else %>
-    <li><%= link_to 'All Comments', goal_comments_path(@goal) %></li>
+    <li class="active"><%= link_to 'All Comments', comments_path %></li>
 <% end %>
