--- a/app/views/layouts/pills/_subscription.html.erb
+++ b/app/views/layouts/pills/_subscription.html.erb
@@ -1,16 +1,10 @@
-<li><%= link_to 'All Goals', goals_path %></li>
-<li><%= link_to 'View Goal', @subscription.goal %></li>
-<li><%= link_to 'All Subscriptions', goal_subscriptions_path(@subscription.goal) %></li>
-<% if current_page?(@subscription) %>
-    <li class="active"><%= link_to 'View Subscription', @subscription %></li>
-<% else %>
-    <li><%= link_to 'View Subscription', @subscription %></li>
-<% end %>
+<li><%= link_to 'Show Goal', goal_path(@subscription.goal) %></li>
+<li><%= link_to 'Show User', user_path(@subscription.user) %></li>
 <% if can? :update, @subscription %>
     <% if current_page?(edit_subscription_path @subscription) %>
-        <li class="active"><%= link_to 'Edit Subscription', edit_subscription_path(@subscription) %></li>
+        <li class="active"><%= link_to 'Edit Subscription', edit_subscription_path(@subscription, action: :edit) %></li>
     <% else %>
-        <li><%= link_to 'Edit Subscription', edit_subscription_path(@subscription) %></li>
+        <li><%= link_to 'Edit Subscription', edit_subscription_path(@subscription, action: :edit) %></li>
     <% end %>
 <% end %>
 <% if can? :destroy, @subscription %>
