--- a/app/views/layouts/pills/_user.html.erb
+++ b/app/views/layouts/pills/_user.html.erb
@@ -1,49 +1,47 @@
-<li><%= link_to 'All Users', users_path %></li>
-<% if current_page?(@user) %>
-    <li class="active"><%= link_to 'View User', @user %></li>
-<% else %>
-    <li><%= link_to 'View User', @user %></li>
-<% end %>
-<% if can? :update, @user %>
-    <% if current_page?(edit_admin_user_path(@user)) %>
-        <% if user_signed_in? && current_user.admin? %>
-            <li class="active"><%= link_to 'Edit User', edit_admin_user_path(@user) %></li>
-        <% else %>
-            <li class="active"><%= link_to 'Edit User', edit_user_registration_path %></li>
-        <% end %>
-    <% elsif current_page?(edit_user_registration_path) %>
-        <% if user_signed_in? && current_user.admin? %>
-            <li class="active"><%= link_to 'Edit User', edit_user_path(@user) %></li>
-        <% else %>
-            <li class="active"><%= link_to 'Edit User', edit_user_registration_path %></li>
-        <% end %>
-    <% elsif params[:controller] == 'users/registrations' &&
-            (params[:action] == 'edit' || params[:action] == 'update') %>
-        <% if user_signed_in? && current_user.admin? %>
-            <li class="active"><%= link_to 'Edit User', edit_user_path(@user) %></li>
-        <% else %>
-            <li class="active"><%= link_to 'Edit User', edit_user_registration_path %></li>
-        <% end %>
+<% if @user.id %>
+    <li><%= link_to 'All Users', users_path %></li>
+    <% if current_page?(@user) %>
+        <li class="active"><%= link_to 'Show User', @user %></li>
     <% else %>
-        <% if user_signed_in? && current_user.admin? %>
+        <li><%= link_to 'Show User', @user %></li>
+    <% end %>
+    <% if can? :update, @user %>
+        <% if current_page?(edit_admin_user_path @user) ||
+                current_page?(edit_user_registration_path) ||
+                current_page?(controller: 'users/registrations', action: (:edit || :update)) %>
+            <% if user_signed_in? && current_user.admin? %>
+                <li class="active"><%= link_to 'Edit User', edit_admin_user_path(@user) %></li>
+            <% elsif user_signed_in? && current_user == @user %>
+                <li class="active"><%= link_to 'Edit User', edit_user_registration_path %></li>
+            <% end %>
+        <% else %>
             <li><%= link_to 'Edit User', edit_admin_user_path(@user) %></li>
-        <% else %>
-            <li><%= link_to 'Edit User', edit_user_registration_path %></li>
         <% end %>
     <% end %>
-<% end %>
-<% if user_signed_in? && current_user.admin? %>
-    <% if @user.active? %>
-        <li><%= link_to 'Deactivate User', @user, method: :delete,
+    <% if user_signed_in? && current_user.admin? %>
+        <% if @user.active? %>
+            <li><%= link_to 'Deactivate User', admin_user_path(@user), method: :delete,
+                            data: {confirm: 'Are you sure?'} %></li>
+        <% else %>
+            <li><%= link_to 'Activate User', admin_user_path(@user, user: {status: :active}), method: :put %></li>
+        <% end %>
+    <% elsif can? :destroy, @user %>
+        <li><%= link_to 'Deactivate User', cancel_user_registration_path,
                         data: {confirm: 'Are you sure?'} %></li>
-    <% else %>
-        <li><%= link_to 'Activate User', admin_user_path(@user, user: {status: :active}),
-                        method: :put %></li>
     <% end %>
-<% else %>
-    <li><%= link_to 'Deactivate User', cancel_user_registration_path,
-                    data: {confirm: 'Are you sure?'} if can? :destroy, @user %></li>
-<% end %>
-<% if @user.tokens.accessible_by(current_ability).present? %>
-    <li><%= link_to 'All Tokens', user_tokens_path(@user) %></li>
+    <% if @user.comments.accessible_by(current_ability).present? %>
+        <li><%= link_to 'User Comments', comments_path(user_id: @user.id) %></li>
+    <% end %>
+    <% if @user.goals.accessible_by(current_ability).present? %>
+        <li><%= link_to 'User Goals', goals_path(user_id: @user.id) %></li>
+    <% end %>
+    <% if @user.scores.accessible_by(current_ability).present? %>
+        <li><%= link_to 'User Scores', scores_path(user_id: @user.id) %></li>
+    <% end %>
+    <% if @user.subscriptions.accessible_by(current_ability).present? %>
+        <li><%= link_to 'User Subscriptions', subscriptions_path(user_id: @user.id) %></li>
+    <% end %>
+    <% if @user.tokens.accessible_by(current_ability).present? %>
+        <li><%= link_to 'User Tokens', user_tokens_path(user_id: @user.id) %></li>
+    <% end %>
 <% end %>
