--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,5 +1,5 @@
-<%= errors_for @score %>
-<%= form_for(@score, html: {class: 'form-horizontal'}) do |f| %>
+<%= errors_for score %>
+<%= form_for(score, url: {controller: :scores, action: action}, html: {class: 'form-horizontal'}) do |f| %>
     <div class="form-group">
       <%= f.label :value, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
