--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,6 +1,4 @@
 <%= content_for :title, t('scores.title.index') %>
-<% if @scores.present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal Scores', resource: nil} do %>
-        <%= render 'goals/scores' %>
-    <% end %>
+<%= render layout: 'layouts/panel', locals: {title: 'All Scores', resource: @scores} do %>
+    <%= render partial: 'scores', locals: {action: :index} %>
 <% end %>
