--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -1,5 +1,6 @@
-<%= errors_for @subscription %>
-<%= form_for(@subscription, html: {class: 'form-horizontal'}) do |f| %>
+<%= errors_for subscription %>
+<%= form_for(subscription, url: {controller: :subscriptions, action: action},
+             html: {class: 'form-horizontal'}) do |f| %>
     <div class="form-group">
       <%= f.label :completed, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
