--- a/app/views/subscriptions/edit.html.erb
+++ b/app/views/subscriptions/edit.html.erb
@@ -1,4 +1,4 @@
 <%= content_for :title, t('subscriptions.title.edit') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Editing Goal Subscription', resource: nil} do %>
-    <%= render 'subscriptions/form' %>
+<%= render layout: 'layouts/panel', locals: {title: 'Editing Subscription', resource: nil} do %>
+    <%= render partial: 'form', locals: {action: :update, subscription: @subscription} %>
 <% end %>
