--- a/app/views/tokens/_token.html.erb
+++ b/app/views/tokens/_token.html.erb
@@ -1,13 +1,13 @@
-<table class="table table-striped">
+<table class="table table-hover">
   <tr class="row">
     <td>Image</td>
     <th>Provider:</th>
     <th colspan="2">Expires At:</th>
   </tr>
   <tr class="row">
-    <td><%= image_tag @token.image %></td>
-    <td><%= link_to @token.provider, @token %></td>
-    <td><%= @token.expires_at.to_formatted_s(:short) %></td>
-    <td><%= link_to 'Delete', @token, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @token %></td>
+    <td><%= image_tag token.image %></td>
+    <td><%= link_to token.provider, token %></td>
+    <td><%= token.expires_at.to_formatted_s(:short) %></td>
+    <td><%= link_to 'Delete', token, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, token %></td>
   </tr>
 </table>
