--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,4 @@
 <%= content_for :title, t('users.title.show') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Viewing User', resource: nil} do %>
-    <%= render @user %>
-<% end %>
-<% if @user.tokens.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Tokens', resource: nil} do %>
-        <%= render 'users/tokens' %>
-    <% end %>
-<% end %>
-<% if @user.goals.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Goals', resource: nil} do %>
-        <%= render 'users/goals' %>
-    <% end %>
-<% end %>
-<% if @user.comments.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Comments', resource: nil} do %>
-        <%= render 'users/comments' %>
-    <% end %>
-<% end %>
-<% if @user.subscriptions.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Subscriptions', resource: nil} do %>
-        <%= render 'users/subscriptions' %>
-    <% end %>
-<% end %>
-<% if @user.scores.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Scores', resource: nil} do %>
-        <%= render 'users/scores' %>
-    <% end %>
+<%= render layout: 'layouts/panel', locals: {title: 'Showing User', resource: nil} do %>
+    <%= render partial: 'user', locals: {action: :show, user: @user} %>
 <% end %>
