Redesigning navbar; removing sidebar

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,26 +1,63 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse"
-              aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Goalify', page_path('home'), class: 'navbar-brand' %>
+      <%= link_to image_tag('favicon.ico', alt: 'Goalify', class: 'navbar-brand'), page_path('home') %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-            <li><%= link_to 'New Goal', new_goal_path %></li>
+            <% if current_page?(new_goal_path) %>
+                <li class="active"><%= link_to 'New Goal', new_goal_path %></li>
+            <% else %>
+                <li><%= link_to 'New Goal', new_goal_path %></li>
+            <% end %>
+            <% if current_user.admin? %>
+                <% if current_page?(new_admin_user_path) %>
+                    <li class="active"><%= link_to 'New User', new_admin_user_path %></li>
+                <% else %>
+                    <li><%= link_to 'New User', new_admin_user_path %></li>
+                <% end %>
+            <% end %>
         <% end %>
-        <li><%= link_to 'Goals', goals_path %></li>
-        <% if user_signed_in? && current_user.admin? %>
-            <li><%= link_to 'New User', new_admin_user_path %></li>
+        <% if @goals %>
+            <%= render 'layouts/goals' %>
+        <% else %>
+            <li><%= link_to 'Goals', goals_path %></li>
         <% end %>
-        <li><%= link_to 'Users', users_path %></li>
-        <li><%= link_to 'About', page_path('about') %></li>
+        <% if @users %>
+            <%= render 'layouts/users' %>
+        <% else %>
+            <li><%= link_to 'Users', users_path %></li>
+        <% end %>
+        <%= render 'layouts/goal' if @goal %>
+        <% if current_page?(new_user_session_path) ||
+                current_page?(controller: 'devise/sessions', action: (:create || :new)) %>
+            <li class="active"><%= link_to 'Sign in', new_user_session_path %></li>
+        <% elsif current_page?(new_user_registration_path) %>
+            <li class="active"><%= link_to 'Sign up', new_user_registration_path %></li>
+        <% elsif @user || current_page?(edit_user_registration_path) ||
+                current_page?(controller: 'users/registrations', action: (:edit || :update)) %>
+            <%= render 'layouts/user' %>
+        <% end %>
+        <%= render 'layouts/comment' if @comment %>
+        <%= render 'layouts/comments' if @comments %>
+        <%= render 'layouts/score' if @score %>
+        <%= render 'layouts/scores' if @scores %>
+        <%= render 'layouts/subscriptions' if @subscriptions %>
+        <%= render 'layouts/token' if @token %>
+        <%= render 'layouts/tokens' if @tokens %>
+        <% if current_page?(page_path('about')) %>
+            <li class="active"><%= link_to 'About', page_path('about') %></li>
+        <% else %>
+            <li><%= link_to 'About', page_path('about') %></li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
