--- a/app/views/layouts/_scores.html.erb
+++ b/app/views/layouts/_scores.html.erb
@@ -1,8 +1,8 @@
 <% if params[:user_id] %>
-    <li><%= link_to 'Show User', user_path(params[:user_id]) %></li>
+    <li><%= link_to 'User', user_path(params[:user_id]) %></li>
     <li class="active"><%= link_to 'User Scores', scores_path(user_id: params[:user_id]) %></li>
 <% elsif params[:goal_id] %>
-    <li><%= link_to 'Show Goal', goal_path(params[:goal_id]) %></li>
+    <li><%= link_to 'Goal', goal_path(params[:goal_id]) %></li>
     <li class="active"><%= link_to 'Goal Scores', scores_path(goal_id: params[:goal_id]) %></li>
 <% else %>
     <li class="active"><%= link_to 'All Scores', scores_path %></li>
