--- a/app/views/layouts/_subscription.html.erb
+++ b/app/views/layouts/_subscription.html.erb
@@ -1,5 +1,5 @@
-<li><%= link_to 'Show Goal', goal_path(@subscription.goal) %></li>
-<li><%= link_to 'Show User', user_path(@subscription.user) %></li>
+<li><%= link_to 'Goal', goal_path(@subscription.goal) %></li>
+<li><%= link_to 'User', user_path(@subscription.user) %></li>
 <% if can? :update, @subscription %>
     <% if current_page?(edit_subscription_path @subscription) %>
         <li class="active"><%= link_to 'Edit Subscription', edit_subscription_path(@subscription, action: :edit) %></li>
