--- a/app/views/layouts/_subscriptions.html.erb
+++ b/app/views/layouts/_subscriptions.html.erb
@@ -1,8 +1,8 @@
 <% if params[:user_id] %>
-    <li><%= link_to 'Show User', user_path(params[:user_id]) %></li>
+    <li><%= link_to 'User', user_path(params[:user_id]) %></li>
     <li class="active"><%= link_to 'User Subscriptions', subscriptions_path %></li>
 <% elsif params[:goal_id] %>
-    <li><%= link_to 'Show Goal', goal_path(params[:goal_id]) %></li>
+    <li><%= link_to 'Goal', goal_path(params[:goal_id]) %></li>
     <li class="active"><%= link_to 'Goal Subscriptions', subscriptions_path %></li>
 <% else %>
     <li class="active"><%= link_to 'All Subscriptions', subscriptions_path %></li>
